<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2F49"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/upcoming_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upcoming_ev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="28dp"
                android:gravity="top"
                android:text="@string/upcoming_ev"
                android:textAppearance="@style/upcoming_ev" />

            <TextView
                android:id="@+id/upcoming_more1"
                android:layout_width="40dp"
                android:layout_height="14dp"
                android:layout_marginLeft="150dp"
                android:gravity="right|top"
                android:text="@string/more_"
                android:textAppearance="@style/more_" />

        </LinearLayout>


        <HorizontalScrollView
            android:id="@+id/upcoming_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upcoming_events"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/event1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="320dp"
                        android:layout_height="170dp"
                        android:layout_gravity="center_horizontal"
                        android:clipToOutline="true"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="20dp">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/join_btn_bg"
                                android:text="Join"
                                android:textColor="@color/white"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="320dp"
                        android:layout_height="170dp"
                        android:layout_gravity="center_horizontal"
                        android:clipToOutline="true"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="20dp">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/join_btn_bg"
                                android:text="Join"
                                android:textColor="@color/white"/>

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    >

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="320dp"
                        android:layout_height="170dp"
                        android:layout_gravity="center_horizontal"
                        android:clipToOutline="true"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:layout_margin="20dp">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/join_btn_bg"
                                android:text="Join"
                                android:textColor="@color/white"/>

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                </RelativeLayout>


            </LinearLayout>


        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/upcoming_scroll"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/project_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="28dp"
                android:gravity="top"
                android:text="@string/projects"
                android:textAppearance="@style/projects" />

            <TextView
                android:id="@+id/more_project"
                android:layout_width="40dp"
                android:layout_height="14dp"
                android:layout_marginLeft="220dp"
                android:gravity="right|top"
                android:text="@string/more_"
                android:textAppearance="@style/more_" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/project_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/project"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/project1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    >

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="#4D000000"/>
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>

</ScrollView>